# economy-discord-bot

./: Pipfile  Procfile  README.md  requirements.txt  setup.cfg  setup.py
economy-bot/: economy-bot.py  economy.py
economy-bot/classes/: bot_configuration.py  bot_database.py  bot_economy.py  economy_bot.py  transaction.py  wallet.py
economy-bot/enums/: operation.py
economy-bot/languages/: selector.py
economy-bot/modules/: common_functions.py  configuration.py
