[metadata]
name = economy-bot
version = 1.0.0
url = https://github.com/StadiaItalia/economy-discord-bot
author = ivozzo
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
description = Build your own discord guild economy with this bot
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >=3.9